--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,19 @@ server.port=8088
 jwt.secret=javainuse
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=tamnd
-spring.datasource.password=tamnd
-spring.datasource.platform=org.hibernate.dialect.Oracle10gDialect
+# Oracle
+# spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+# spring.datasource.username=tamnd
+# spring.datasource.password=tamnd
+# spring.datasource.platform=org.hibernate.dialect.Oracle10gDialect
 spring.jpa.hibernate.ddl-auto= update  
-#create-drop
+#create-drop-update
+# Mysql 
+spring.datasource.url=jdbc:mysql://localhost:3306/springbootLab?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=
+
 spring.jpa.generate-ddl=false
-# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle10gDialect
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.springframework.web=INFO
