--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 
 server.port=8088
-
+application-description=@project.description@
+application-version=@project.version@
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
 jwt.secret=javainuse
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
@@ -9,7 +13,7 @@ app.jwtExpirationInMs = 604800000
 # spring.datasource.username=tamnd
 # spring.datasource.password=tamnd
 # spring.datasource.platform=org.hibernate.dialect.Oracle10gDialect
-spring.jpa.hibernate.ddl-auto= update  
+spring.jpa.hibernate.ddl-auto= create-drop  
 #create-drop-update
 # Mysql 
 spring.datasource.url=jdbc:mysql://localhost:3306/springbootLab?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
