--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
 	</properties>
 
 	<dependencies>
+		 <!--for test-->
+		 <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
