--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 
 server.port=8088
+redis.host=localhost
+redis.port=6379
+
 # Logging pattern for the console
 logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 #logging pattern for file
