--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,10 +40,9 @@ spring.application.name=item-catalog-service
 # eureka.client.region = default
 # eureka.client.registryFetchIntervalSeconds = 5
 # eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-# spring.rabbitmq.listener.direct.auto-startup=false
-# spring.rabbitmq.host=localhost
-# spring.rabbitmq.port=5672
-# spring.rabbitmq.username=guest
-# spring.rabbitmq.password=guest
-
-# spring.cloud.stream.bindings.greetingChannel.destination = greetings
+spring.rabbitmq.listener.direct.auto-startup=false
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.cloud.stream.bindings.greetingChannel.destination = greetings
