--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,21 @@
     <artifactId>spring-data-redis</artifactId>
     <version>2.3.3.RELEASE</version>
  </dependency>
-
+<dependency>
+    <groupId>com.innoventsolutions.birt.runtime</groupId>
+    <artifactId>org.eclipse.birt.runtime_4.8.0-20180626</artifactId>
+    <version>4.8.0</version>
+</dependency>
+<dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports</artifactId>
+		    <version>6.16.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports-fonts</artifactId>
+		    <version>6.16.0</version>
+		</dependency>		
 <dependency>
     <groupId>redis.clients</groupId>
     <artifactId>jedis</artifactId>
