--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,16 +17,16 @@ jwt.secret=javainuse
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
 # Oracle
-# spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-# spring.datasource.username=tamnd
-# spring.datasource.password=tamnd
-# spring.datasource.platform=org.hibernate.dialect.Oracle10gDialect
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=tamnd
+spring.datasource.password=tamnd
+spring.datasource.platform=org.hibernate.dialect.Oracle10gDialect
 spring.jpa.hibernate.ddl-auto= update
 #create-drop-update
 # Mysql 
-spring.datasource.url=jdbc:mysql://localhost:3306/springbootLab?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=
+# spring.datasource.url=jdbc:mysql://localhost:3306/springbootLab?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+# spring.datasource.username=root
+# spring.datasource.password=
 
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
