--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,6 +41,7 @@ spring.application.name=item-catalog-service
 # eureka.client.registryFetchIntervalSeconds = 5
 # eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.rabbitmq.listener.direct.auto-startup=false
+spring.rabbit.auto-startup=false
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
