--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ app.jwtExpirationInMs = 604800000
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=tamnd
 spring.datasource.password=tamnd
-spring.datasource.platform=org.hibernate.dialect.Oracle10gDialect
+spring.datasource.platform=org.hibernate.dialect.Oracle12gDialect
 spring.jpa.hibernate.ddl-auto= update
 #create-drop-update
 # Mysql 
@@ -30,21 +30,21 @@ spring.jpa.hibernate.ddl-auto= update
 
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
-logging.level.org.hibernate.SQL=debug
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate=INFO
-logging.file=D:/Microservices/MyMicroserviceEureka/BE/Catalog/logs/app.log
-logging.level.org.springframework.jdbc.core.JdbcTemplate=debug
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-spring.application.name=item-catalog-service
+# logging.level.org.hibernate.SQL=debug
+# logging.level.org.springframework.web=INFO
+# logging.level.org.hibernate=INFO
+# logging.file=D:/Microservices/MyMicroserviceEureka/BE/Catalog/logs/app.log
+# logging.level.org.springframework.jdbc.core.JdbcTemplate=debug
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# spring.application.name=item-catalog-service
 # eureka.client.region = default
 # eureka.client.registryFetchIntervalSeconds = 5
 # eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-spring.rabbitmq.listener.direct.auto-startup=false
-spring.rabbit.auto-startup=false
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-spring.cloud.stream.bindings.greetingChannel.destination = greetings
+# spring.rabbitmq.listener.direct.auto-startup=false
+# spring.rabbit.auto-startup=false
+# spring.rabbitmq.host=localhost
+# spring.rabbitmq.port=5672
+# spring.rabbitmq.username=guest
+# spring.rabbitmq.password=guest
+# spring.cloud.stream.bindings.greetingChannel.destination = greetings
 jasper.report.path=C:/Reports/
