--- a/pom.xml
+++ b/pom.xml
@@ -2,18 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.example</groupId>
+	<artifactId>catalog</artifactId>
+	<version>1.0</version>
+	<name>catalog</name>
+	<description>Demo project for Spring Boot</description>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.4.0-SNAPSHOT</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>Catalog</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>Catalog</name>
-	<description>Demo project for Spring Boot</description>
-
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>2020.0.0-SNAPSHOT</spring-cloud.version>
@@ -152,11 +151,12 @@
     <artifactId>spring-data-redis</artifactId>
     <version>2.3.3.RELEASE</version>
  </dependency>
+<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
 <dependency>
-		    <groupId>net.sf.jasperreports</groupId>
-		    <artifactId>jasperreports</artifactId>
-		    <version>6.16.0</version>
-		</dependency>
+    <groupId>net.sf.jasperreports</groupId>
+    <artifactId>jasperreports</artifactId>
+    <version>6.16.0</version>
+</dependency>
 		<dependency>
 		    <groupId>net.sf.jasperreports</groupId>
 		    <artifactId>jasperreports-fonts</artifactId>
@@ -173,6 +173,11 @@
     <artifactId>spring-boot-starter-data-redis</artifactId>
     <version>2.3.3.RELEASE</version>
 </dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -181,6 +186,14 @@
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
 				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>2020.0.0</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
