--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe?createDatabaseIfNotExi
 spring.datasource.username=tamnd
 spring.datasource.password=tamnd
 spring.datasource.platform=org.hibernate.dialect.Oracle12gDialect
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.hibernate.ddl-auto= update
 #create-drop-update
 # Mysql 
