update scheduler quatz

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,18 +17,18 @@ jwt.secret=javainuse
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
 # Oracle
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=tamnd
-spring.datasource.password=tamnd
-spring.datasource.platform=org.hibernate.dialect.Oracle12gDialect
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+# spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+# spring.datasource.username=tamnd
+# spring.datasource.password=tamnd
+# spring.datasource.platform=org.hibernate.dialect.Oracle12gDialect
+# spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.hibernate.ddl-auto= update
 #create-drop-update
 # Mysql 
-# spring.datasource.url=jdbc:mysql://localhost:3306/springbootLab?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-# spring.datasource.username=root
-# spring.datasource.password=
-
+spring.datasource.url=jdbc:mysql://localhost:3306/springbootLab?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 # logging.level.org.hibernate.SQL=debug
@@ -49,3 +49,16 @@ spring.jpa.show-sql=true
 # spring.rabbitmq.password=guest
 # spring.cloud.stream.bindings.greetingChannel.destination = greetings
 jasper.report.path=C:/Reports/
+
+
+using.spring.schedulerFactory=false
+# org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+# org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+# org.quartz.jobStore.dataSource=quartzDataSource
+# spring.quartz.job-store-type=jdbc
+# The obvious drawback of the RAMJobStore is that it is volatile in nature. All the scheduling information is lost between shutdowns. If job definitions and schedules must be kept between shutdowns, the persistent JDBCJobStore must be used instead.
+org.quartz.jobStore.class=org.quartz.simpl.RAMJobStore
+spring.quartz.job-store-type=memory
+
+
+spring.devtools.restart.log-condition-evaluation-delta=false
