--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-server.port=8088
+server.port=8089
 redis.host=localhost
 redis.port=6379
 
@@ -51,7 +51,7 @@ spring.jpa.show-sql=true
 jasper.report.path=C:/Reports/
 
 
-using.spring.schedulerFactory=false
+using.spring.schedulerFactory=true
 # org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
 # org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
 # org.quartz.jobStore.dataSource=quartzDataSource
