--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>2020.0.0-SNAPSHOT</spring-cloud.version>
+		<!-- testing -->
+        <assertj.version>3.6.1</assertj.version>
+        <avaitility.version>1.7.0</avaitility.version>
 	</properties>
 
 	<dependencies>
@@ -35,6 +38,12 @@
 			<version>1.8</version>
 		</dependency>
 		<!--for test-->
+		<dependency>
+            <groupId>com.jayway.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>${avaitility.version}</version>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -204,6 +213,7 @@
 			<artifactId>quartz</artifactId>
 			<version>2.3.2</version>
         </dependency>
+		
 	</dependencies>
 
 	<dependencyManagement>
