--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.jpa.hibernate.ddl-auto= update
 # Mysql 
 spring.datasource.url=jdbc:mysql://localhost:3306/springbootLab?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
