--- a/pom.xml
+++ b/pom.xml
@@ -229,6 +229,11 @@
 			<artifactId>quartz</artifactId>
 			<version>2.3.2</version>
         </dependency>
+		<dependency>
+			<groupId>one.util</groupId>
+			<artifactId>streamex</artifactId>
+			<version>0.6.5</version>
+		</dependency>
 		
 	</dependencies>
 
