--- a/pom.xml
+++ b/pom.xml
@@ -175,17 +175,18 @@
 			<artifactId>spring-data-redis</artifactId>
 			<version>2.3.3.RELEASE</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+		<!-- Jasper Dependency -->
+		<!-- <dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>2.1.7</version>
+			<scope>compile</scope>
+		</dependency>
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
-			<version>6.16.0</version>
-		</dependency>
-		<dependency>
-			<groupId>net.sf.jasperreports</groupId>
-			<artifactId>jasperreports-fonts</artifactId>
-			<version>6.16.0</version>
-		</dependency>
+			<version>6.4.0</version>
+		</dependency> -->
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
@@ -286,6 +287,14 @@
 	</build>
 
 	<repositories>
+		<!-- <repository>
+			<id>jasperreports</id>
+			<url>http://jasperreports.sourceforge.net/maven2</url>
+		</repository>
+		<repository>
+			<id>jaspersoft-third-party</id>
+			<url>http://jaspersoft.artifactoryonline.com/jaspersoft/third-party-ce-artifacts/</url>
+		</repository> -->
 		<repository>
 			<id>spring-milestones</id>
 			<name>Spring Milestones</name>
