--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ application-version=@project.version@
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
-jwt.secret=javainuse
+jwt.secret=javainuse1
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
 # Oracle
