--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,3 +62,27 @@ spring.quartz.job-store-type=memory
 
 
 spring.devtools.restart.log-condition-evaluation-delta=false
+
+
+# Properties file for controlling db2sql.java
+
+# Driver information (make sure the appropriate classes/jars are on the classpath)
+# ==================
+#
+# These are mandatory, you must provide appropriate values
+driver.url=jdbc:sqlserver://localhost:1433;databaseName=SGH5;username=sa;password=yourStrong(!)Password;
+driver.class=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# Information passed to DriverManger.getConnection
+# ================================================
+#
+# Put any information here that you want to pass to the DriverManager, for example:
+user=&lt;sa&gt;
+password=&lt;yourStrong(!)Password&gt;
+
+# Configuration information
+# =========================
+#
+# Optional information that you can set to control which tables are output etc.
+# See <a href="http://java.sun.com/j2se/1.4.2/docs/api/java/sql/DatabaseMetaData.html#getTables%28java.lang.String,%20java.lang.String,%20java.lang.String,%20java.lang.String%5B%5D%29">
+</a>target="_BLANK"&gt;DatabaseMetaData.getTables(...) for information on how to use these.
