update kafka config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -86,3 +86,8 @@ password=&lt;yourStrong(!)Password&gt;
 # Optional information that you can set to control which tables are output etc.
 # See <a href="http://java.sun.com/j2se/1.4.2/docs/api/java/sql/DatabaseMetaData.html#getTables%28java.lang.String,%20java.lang.String,%20java.lang.String,%20java.lang.String%5B%5D%29">
 </a>target="_BLANK"&gt;DatabaseMetaData.getTables(...) for information on how to use these.
+
+#Kafka
+kafka.bootstrap-servers=localhost:9092
+kafka.consumer.group-id=myGroup
+kafka.enabled=false
