--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>2.6.0</version>
+		</dependency>
+		<dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>javax.mail</artifactId>
             <version>1.6.2</version>
@@ -253,7 +258,7 @@
 			<artifactId>streamex</artifactId>
 			<version>0.6.5</version>
 		</dependency>
-		
+
 	</dependencies>
 
 	<dependencyManagement>
