--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -91,3 +91,5 @@ password=&lt;yourStrong(!)Password&gt;
 kafka.bootstrap-servers=localhost:9092
 kafka.consumer.group-id=myGroup
 kafka.enabled=false
+
+#test main2
