--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,11 +24,22 @@ app.jwtExpirationInMs = 604800000
 # spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.hibernate.ddl-auto= update
 #create-drop-update
+
+# Postgres Sql
+spring.datasource.hikari.poolName=SpringBootJPAHikariCP
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/dbtest?ApplicationName=Webapps
+# ApplicationName property for application_name in table pg_stat_activity
+spring.datasource.username=postgres
+spring.datasource.password=123456
+spring.datasource.hikari.maximum-pool-size=20
+
 # Mysql 
-spring.datasource.url=jdbc:mysql://localhost:3306/springbootLab?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/springbootLab?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 # logging.level.org.hibernate.SQL=debug
@@ -66,19 +77,16 @@ spring.devtools.restart.log-condition-evaluation-delta=false
 
 # Properties file for controlling db2sql.java
 
-# Driver information (make sure the appropriate classes/jars are on the classpath)
-# ==================
-#
-# These are mandatory, you must provide appropriate values
-driver.url=jdbc:sqlserver://localhost:1433;databaseName=SGH5;username=sa;password=yourStrong(!)Password;
-driver.class=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# MSSQL
+#driver.url=jdbc:sqlserver://localhost:1433;databaseName=SGH5;username=sa;password=yourStrong(!)Password;
+#driver.class=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # Information passed to DriverManger.getConnection
 # ================================================
 #
 # Put any information here that you want to pass to the DriverManager, for example:
-user=&lt;sa&gt;
-password=&lt;yourStrong(!)Password&gt;
+#user=&lt;sa&gt;
+#password=&lt;yourStrong(!)Password&gt;
 
 # Configuration information
 # =========================
