--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/dbtest?ApplicationName=We
 # ApplicationName property for application_name in table pg_stat_activity
 spring.datasource.username=postgres
 spring.datasource.password=123456
-spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.maximum-pool-size=1
 
 # Mysql 
 #spring.datasource.url=jdbc:mysql://localhost:3306/springbootLab?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
@@ -99,3 +99,6 @@ spring.devtools.restart.log-condition-evaluation-delta=false
 kafka.bootstrap-servers=localhost:9092
 kafka.consumer.group-id=myGroup
 kafka.enabled=false
+
+mybatis.config-location=classpath:sql.xml
+#mybatis.mapper-locations: mapper/*.xml
