--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,20 @@ logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 #logging pattern for file
 logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 logging.file.name=api.log
+logging.level.jdbc.audit = off
+logging.level.jdbc.sqlonly = info
+logging.level.jdbc.connection = off
+logging.level.jdbc.sqltiming = off
+logging.level.jdbc.resultset = off
+logging.level.jdbc.resultsettable = off
+
+log4jdbc.auto.load.popular.drivers = false
+
+log4jdbc.dump.sql.maxlinelength = 0
+log4jdbc.dump.sql.addsemicolon = true
+
+log4jdbc.trim.sql.extrablanklines = false
+
 application-description=@project.description@
 application-version=@project.version@
 springdoc.api-docs.path=/api-docs
@@ -87,13 +101,6 @@ spring.devtools.restart.log-condition-evaluation-delta=false
 # Put any information here that you want to pass to the DriverManager, for example:
 #user=&lt;sa&gt;
 #password=&lt;yourStrong(!)Password&gt;
-
-# Configuration information
-# =========================
-#
-# Optional information that you can set to control which tables are output etc.
-# See <a href="http://java.sun.com/j2se/1.4.2/docs/api/java/sql/DatabaseMetaData.html#getTables%28java.lang.String,%20java.lang.String,%20java.lang.String,%20java.lang.String%5B%5D%29">
-</a>target="_BLANK"&gt;DatabaseMetaData.getTables(...) for information on how to use these.
 
 #Kafka
 kafka.bootstrap-servers=localhost:9092
