--- a/pom.xml
+++ b/pom.xml
@@ -263,6 +263,16 @@
 			<artifactId>streamex</artifactId>
 			<version>0.6.5</version>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.log4jdbc</groupId>
+			<artifactId>log4jdbc</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>ru.vasiand</groupId>
+			<artifactId>spring-boot-starter-log4jdbc</artifactId>
+			<version>1.1.0</version>
+		</dependency>
 
 	</dependencies>
 
