--- a/pom.xml
+++ b/pom.xml
@@ -273,6 +273,16 @@
 			<artifactId>spring-boot-starter-log4jdbc</artifactId>
 			<version>1.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.integralblue</groupId>
+			<artifactId>log4jdbc-spring-boot-starter</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 
 	</dependencies>
 
