jwt refresh token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,8 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 jwt.secret=javainuse1
 app.jwtSecret= JWTSuperSecretKey
-app.jwtExpirationInMs = 604800000
+app.jwtExpirationInMs = 600000
+app.jwtRefreshExpirationMs= 86400000
 # Oracle
 # spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 # spring.datasource.username=tamnd
