--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,7 +47,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/dbtest?ApplicationName=We
 # ApplicationName property for application_name in table pg_stat_activity
 spring.datasource.username=postgres
 spring.datasource.password=123456
-spring.datasource.hikari.maximum-pool-size=1
+spring.datasource.hikari.maximum-pool-size=10
 
 # Mysql 
 #spring.datasource.url=jdbc:mysql://localhost:3306/springbootLab?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
@@ -109,3 +109,11 @@ kafka.enabled=false
 
 mybatis.config-location=classpath:sql.xml
 #mybatis.mapper-locations: mapper/*.xml
+
+#config for prometheus
+management.endpoints.web.exposure.include=*
+
+cache.hazelcast.instance-name=springBootApp
+cache.mode=local
+cache.multicast.ip=1.1.1.1
+cache.multicast.port=223
