update jdk 21 and virtual thread new feature in spring boot 3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -107,3 +107,6 @@ CACHE_REDIS_PORT=actual_port_of_redis_server
 CACHE_REDIS_PASSWORD=actual_password_of_redis_server
 COMMON_DS_REDIS_TLS_ENABLED=true
 COMMON_DS_REDIS_CA_CERT=/tmp/redis/server-ca-redis.pem
+
+spring.threads.virtual.enabled=true
+spring.threads.virtual.enabled.manually=false
