--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <avaitility.version>1.7.0</avaitility.version>
 		<apache-poi.version>5.0.0</apache-poi.version>
@@ -197,7 +197,7 @@
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
-			<version>6.4.0</version>
+			<version>6.21.3</version>
 		</dependency>
 		<dependency>
 			<groupId>redis.clients</groupId>
@@ -292,6 +292,14 @@
 
 <!--	<build>-->
 <!--		<plugins>-->
+<!--			<plugin>-->
+<!--				<artifactId>maven-compiler-plugin</artifactId>-->
+<!--				<version>3.8.1</version>-->
+<!--				<configuration>-->
+<!--					<source>21</source>-->
+<!--					<target>21</target>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
 <!--			<plugin>-->
 <!--				<groupId>org.springframework.boot</groupId>-->
 <!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
