--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -109,3 +109,11 @@ COMMON_DS_REDIS_CA_CERT=/tmp/redis/server-ca-redis.pem
 
 spring.threads.virtual.enabled=true
 spring.threads.virtual.enabled.manually=false
+
+#Keycloak Oauth2
+spring.security.oauth2.client.registration.keycloak.provider=springboot_test
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.client-id=keycloak_spring
+spring.security.oauth2.client.registration.keycloak.client-secret=o94jCaIX50iUjLn6o3eF0Hzfdxj91Iox
+spring.security.oauth2.client.registration.keycloak.scope=openid, profile, roles
+spring.security.oauth2.client.provider.springboot_test.issuer-uri=http://localhost:8080/realms/springboot_test
